objects/Staff__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joined_Date__c</fullName>
        <label>Joined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Staff</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Salary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Staff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>staff</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>